# Local-Outlier-Factor

./: CMakeLists.txt  README.md  main.c  measurement_Final_AVX.txt
avx/: main.c
avx/include/: AVXMetrics.h  AVXTopoInfo.h  AVX_utils.h  ComputeKDistanceAll.h  ComputeKDistanceNeighborhood.h  ComputeLocalOutlierFactor.h  ComputeLocalOutlierFactorAVX.h  ComputeLocalReachabilityDensity.h  ComputeLocalReachabilityDensityMerged.h  ComputeLocalReachabilityDensityMergedAVX.h  ComputeLocalReachabilityDensityMerged_Point.h  ComputeLocalReachabilityDensityMerged_PointAVX.h  ComputePairwiseDistanceMMMAvx.h  ComputeReachabilityDistance.h  KNN.h  MMMAvx.h
avx/performance_improvement/: AVXTopoInfo.c  AVX_lattice.c  AVX_metrics.c  ComputeKDistanceAll.c  ComputeKDistanceNeighborhood.c  ComputeLocalOutlierFactor.c  ComputeLocalOutlierFactorAVX.c  ComputeLocalReachabilityDensityMerged.c  ComputeLocalReachabilityDensityMergedAVX.c  ComputeLocalReachabilityDensityMerged_Point.c  ComputeLocalReachabilityDensityMerged_PointAVX.c  ComputePairwiseDistanceMMMAvx.c  FasterMetrics.c  KNN.c  MMMAvx.c
avx/src/: AVX_utils.c
baseline/: main.c
baseline/include/: lof.h
baseline/src/: crun.py  lof.c
benchmarks/: benchmark_baseline.c  benchmark_topology.c  final_benchmarks.c
benchmarks/text_dump/: avx_plots_dim_new_ASY.txt  avx_plots_k_new_ASY.txt  avx_plots_num_pts_new_ASY.txt  baseline_plots.txt  baseline_plots_dim.txt  baseline_plots_dim_new.txt  baseline_plots_k_new_ASY.txt  baseline_plots_num_pts_new_ASY.txt  bl_plots_dim_new_ASY.txt  unr_plots_dim_new_ASY.txt  unrolled_plots_k_new_ASY.txt  unrolled_plots_num_pts_new_ASY.txt
data/: Execution_time_python.txt
data/n1000_k3_dim4/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n100_k3_dim4/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k128_dim16/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k128_dim2/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k128_dim32/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k128_dim4/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k128_dim64/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k128_dim8/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k16_dim128/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k16_dim16/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k16_dim2/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k16_dim32/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k16_dim4/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k16_dim64/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k16_dim8/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k2_dim128/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k2_dim16/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k2_dim2/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k2_dim32/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k2_dim4/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k2_dim64/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k2_dim8/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k32_dim128/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k32_dim16/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k32_dim2/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k32_dim32/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k32_dim4/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k32_dim64/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k32_dim8/: dataset.txt  lof_results.txt  lrd_results.txt  metadata.txt  neigh_dist_results.txt  neigh_ind_results.txt
data/n1024_k4_dim128/: dataset.txt  lof_results.txt  lrd_results.txt  (+3 more)
include/: Algorithm.h  ComputeTopologyInfo.h  benchmarks.h  file_utils.h  final_benchmarks.h  final_plots.h  lattice.h  lof_baseline.h  metrics.h  performance_measurement.h  sort.h  tests.h  tsc_x86.h  utils.h
memory/: main.c
python_scripts/: _lof.py  generator.py  performance_plots.ipynb
report/: ASL_project_summary.aux  ASL_project_summary.tex
src/: Algorithm.c  ComputeTopologyInfo.c  file_utils.c  final_plots.c  lattice.c  lof_baseline.c  metrics.c  performance_measurement.c  sort.c  tests.c  utils.c
unrolled/: main.c
(+1432 files in other folders)
